--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,27 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_SERVICE=webserver
+APP_PORT=4040
+VITE_PORT=4041
+FORWARD_DB_PORT=4042
+WWWGROUP=1000
+WWWUSER=1000
+SAIL_XDEBUG_MODE=off
+SAIL_XDEBUG_CONFIG=client_host=host.docker.internal
 
-LOG_CHANNEL=stack
+APP_NAME=Reservoir
+APP_ENV=production
+APP_KEY=
+APP_DEBUG=false
+APP_URL="http://localhost:${APP_PORT}"
+
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=reservoir
-DB_USERNAME=root
+DB_CONNECTION=pgsql
+DB_HOST=database
+DB_PORT=5432
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
