--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,46 @@
-# For more information: https://laravel.com/docs/sail
 version: '3'
 services:
-    laravel.test:
-        build:
-            context: ./vendor/laravel/sail/runtimes/8.1
-            dockerfile: Dockerfile
-            args:
-                WWWGROUP: '${WWWGROUP}'
-        image: sail-8.1/app
+    webserver:
+        image: raazpuspa/larasail:8.1
+        container_name: '${APP_NAME:-reservoir}'
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
-            - '${APP_PORT:-80}:80'
-            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
+            - '${APP_PORT:-4040}:80'
+            - '${VITE_PORT:-4041}:${VITE_PORT:-4041}'
         environment:
-            WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
+            WWWUSER: '${WWWUSER:-1000}'
+            WWWGROUP: '${WWWGROUP:-1000}'
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
         volumes:
             - '.:/var/www/html'
         networks:
-            - sail
+            - internal
         depends_on:
-            - pgsql
-    pgsql:
+            - database
+    database:
         image: 'postgres:14'
+        container_name: '${APP_NAME:-reservoir}_database'
         ports:
-            - '${FORWARD_DB_PORT:-5432}:5432'
+            - '${FORWARD_DB_PORT:-4042}:5432'
         environment:
-            PGPASSWORD: '${DB_PASSWORD:-secret}'
-            POSTGRES_DB: '${DB_DATABASE}'
-            POSTGRES_USER: '${DB_USERNAME}'
-            POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
+            PGPASSWORD: '${DB_PASSWORD:-reservoir}'
+            POSTGRES_DB: '${DB_DATABASE:-reservoir}'
+            POSTGRES_USER: '${DB_USERNAME:-reservoir}'
+            POSTGRES_PASSWORD: '${DB_PASSWORD:-reservoir}'
         volumes:
-            - 'sail-pgsql:/var/lib/postgresql/data'
-            - './vendor/laravel/sail/database/pgsql/create-testing-database.sql:/docker-entrypoint-initdb.d/10-create-testing-database.sql'
+            - 'database:/var/lib/postgresql/data'
         networks:
-            - sail
+            - internal
         healthcheck:
-            test: ["CMD", "pg_isready", "-q", "-d", "${DB_DATABASE}", "-U", "${DB_USERNAME}"]
+            test: [ "CMD", "pg_isready", "-q", "-d", "${DB_DATABASE:-reservoir}", "-U", "${DB_USERNAME:-reservoir}" ]
             retries: 3
             timeout: 5s
 networks:
-    sail:
+    internal:
         driver: bridge
 volumes:
-    sail-pgsql:
+    database:
         driver: local
