--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,13 @@
 {
-    "name": "laravel/laravel",
+    "name": "myzenteam/reservoir",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "The resource management system for MyZenTeam, as part of an assignment submitted by Pusparaj Bhattarai.",
+    "keywords": ["resource", "management"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.1.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
-        "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
@@ -18,6 +17,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
+        "roave/security-advisories": "dev-latest",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
