--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.6",
         "vite": "^3.0.0",
-        "vue": "^3.2.37"
+        "vue": "^3.2.37",
+        "vue-router": "^4.1.2"
     }
 }
